# notrust

./: Cargo.toml
src/: index.html  index.rs  main.rs  serve.rs
