[package]
name = "mailindexer"
version = "0.1.0"
authors = ["Felix Konstantin Maurer <maufl@maufl.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
maildir = "0.3"
mailparse = "0.8"
clap = "2.33"
tantivy = "0.10"
iron = "0.4"
mount = "0.2"
staticfile = "0.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
persistent="0.2"
urlencoded = "0.4"